[package]
name = "crud"
version = "0.1.0"
authors = ["Dylan Fontana <dyfontana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.0.0"
tokio = "0.2.22"
futures = "0.3.5"
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
log = "0.4.0"
env_logger = "0.7.1"
serde = "1.0.115"
thiserror = "1.0"
derive_builder = "0.9.0"