[package]
name = "devup"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
error-chain = "0.12.2"
confy = "0.4.0"
serde = {version = "1.0.106", features = ["derive"] }
git2 = "0.13"
dialoguer = "0.6.2"
