[package]
name = "lib"
version = "0.1.0"
authors = ["Dylan Fontana <dyfontana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"
imageproc = "0.20.0"
rand = "0.7.3"
regex = "1.3.7"
lazy_static = "1.4.0"
